[gd_scene load_steps=23 format=2]

[ext_resource path="res://Levels/Level1/Sprites/assembly_view.png" type="Texture" id=1]
[ext_resource path="res://Levels/Level1/Scenes/ExplodedView.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Antenna.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Level1/Scenes/DragManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Frame.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level1/Sprites/Parts/solar_back1Iso.png" type="Texture" id=7]
[ext_resource path="res://Levels/Level1/Sprites/Parts/solar_bot_Iso.png" type="Texture" id=8]
[ext_resource path="res://Levels/Level1/Sprites/Parts/solar_top_Iso.png" type="Texture" id=9]
[ext_resource path="res://Levels/Level1/Sprites/Parts/frame1Iso.png" type="Texture" id=10]
[ext_resource path="res://Levels/Level1/Sprites/Parts/solar_frontIso.png" type="Texture" id=11]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Bat.tscn" type="PackedScene" id=12]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Board1.tscn" type="PackedScene" id=13]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Solar.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/Level1/Lvl1_Container.gd" type="Script" id=15]
[ext_resource path="res://Levels/Level1/Sprites/assemble_button.png" type="Texture" id=16]
[ext_resource path="res://Levels/Level1/Sprites/360_F_108848216_xDD3H6mIBxMueyBoMEQS9ThKHeTalBaY.jpg" type="Texture" id=17]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Air.tscn" type="PackedScene" id=18]
[ext_resource path="res://Levels/Level1/Scenes/ExplicitParts/Control.tscn" type="PackedScene" id=19]
[ext_resource path="res://Levels/Level1/Scenes/Popup.tscn" type="PackedScene" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 391, 176 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Lvl1_Container" type="Node2D"]
script = ExtResource( 15 )

[node name="Table" type="ColorRect" parent="."]
modulate = Color( 0.517647, 0.615686, 0.713726, 1 )
margin_left = 25.0
margin_top = 324.0
margin_right = 895.0
margin_bottom = 895.0

[node name="AssemblyView" type="Sprite" parent="."]
position = Vector2( 470, 197 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="AssemblyView" groups=["zone"]]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AssemblyView/Area2D"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sockets" parent="." instance=ExtResource( 2 )]
position = Vector2( 70, 0 )

[node name="FinalAssembly" type="Node2D" parent="."]
position = Vector2( 70, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="SolarFrontIso" type="Sprite" parent="FinalAssembly"]
position = Vector2( 294, 290 )
z_index = 102
texture = ExtResource( 11 )

[node name="SolarBotIso" type="Sprite" parent="FinalAssembly"]
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
position = Vector2( 204, 321 )
texture = ExtResource( 8 )

[node name="SolarBack1Iso" type="Sprite" parent="FinalAssembly"]
position = Vector2( 118, 187 )
texture = ExtResource( 7 )

[node name="Frame1Iso2" type="Sprite" parent="FinalAssembly"]
position = Vector2( 204, 94 )
z_index = 100
texture = ExtResource( 10 )

[node name="SolarTopIso" type="Sprite" parent="FinalAssembly"]
position = Vector2( 204, 65 )
z_index = 100
texture = ExtResource( 9 )

[node name="Frame1Iso" type="Sprite" parent="FinalAssembly"]
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
position = Vector2( 204, 291 )
texture = ExtResource( 10 )

[node name="DragManager" parent="." instance=ExtResource( 4 )]

[node name="Antenna" parent="DragManager" instance=ExtResource( 3 )]
position = Vector2( 150, 753 )
rotation = 2.54437
z_index = 5

[node name="Frame" parent="DragManager" instance=ExtResource( 6 )]
position = Vector2( 317, 680 )
rotation = -0.261799
z_index = 5

[node name="Frame2" parent="DragManager" instance=ExtResource( 6 )]
position = Vector2( 734, 548 )
rotation = 1.0472
z_index = 5

[node name="Camera" parent="DragManager" instance=ExtResource( 5 )]
position = Vector2( 454, 545 )
rotation = 0.261799
z_index = 5

[node name="Bat" parent="DragManager" instance=ExtResource( 12 )]
position = Vector2( 628, 563 )
rotation = 0.523598
z_index = 5

[node name="Board1" parent="DragManager" instance=ExtResource( 13 )]
position = Vector2( 386, 795 )
rotation = -0.785397
z_index = 5

[node name="Solar" parent="DragManager" instance=ExtResource( 14 )]
position = Vector2( 587, 766 )
rotation = 1.30237
z_index = 5

[node name="Control" parent="DragManager" instance=ExtResource( 19 )]
position = Vector2( 185, 527 )
rotation = 0.785397
z_index = 5

[node name="Air" parent="DragManager" instance=ExtResource( 18 )]
position = Vector2( 739, 719 )
rotation = 0.261799
z_index = 5

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 654.0
margin_top = 291.0
margin_right = 850.0
margin_bottom = 356.0
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 16 )
flat = true

[node name="WinText" type="Sprite" parent="."]
visible = false
position = Vector2( 460, 520 )
scale = Vector2( 0.811111, 0.811111 )
z_index = 500
texture = ExtResource( 17 )

[node name="Popup" parent="." instance=ExtResource( 20 )]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
